# chatgpt-discord-bot

./: .flake8  .gitignore  .replit  Dockerfile  LICENSE  Makefile  README.md  chat_bot.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-build.yml
discord_bot/: app.py
discord_bot/functions/: base.py  get_igdb_game_info.py  get_igdb_platform_ids.py  get_news.py  get_weather.py  get_webpage_contents.py  memory_function.py  search_web.py
discord_bot/handlers/: chatgpt_handler.py  discord_handler.py  function_handler.py  utilities.py  vector_handler.py  vectore_store.py
tests/: test_chat_bot.py
